--- a/stocklist/templates/stocklist/detail.html
+++ b/stocklist/templates/stocklist/detail.html
@@ -1,5 +1,5 @@
 {% extends "stocklist/base.html" %}
-{% block title %}Stock Details{% endblock %}
+{% block title %}Stock List{% endblock %}
 
 {% block body %}
     <h1>{{ stocklist.list_title }}</h1>
@@ -8,18 +8,23 @@
         <p><strong>{{ error_message }}</strong></p>
     {% endif %}
 
-    <form action="{% url 'stocklist:portfolio' stocklist.id %}" method="post">
-        {% csrf_token %}
+    <!--<form action="{% url 'stocklist:portfolio' stocklist.pk %}" method="post">-->
+        <!--{% csrf_token %}-->
         {% for stock in stocklist.stock_set.all %}
-            <input type="radio" id="stock{{ forloop.counter }}" name="stock" value="{{ stock.id }}" />
-            <label for="stock{{ forloop.counter }}">
-                {{ stock.stock_title }}
-                {% if stock.in_portfolio %}
-                    <img src="http://i.imgur.com/b9b13Rd.png" />
-                {% endif %}
-            </label><br>
+            <!--<input type="radio" id="stock{{ forloop.counter }}" name="stock" value="{{ stock.id }}" />-->
+            <!--<label for="stock{{ forloop.counter }}">-->
+
+                <li><a href="{% url 'stocklist:detail_stock' stocklist.list_title stock.stocktag_num %}">{{ stock.stock_title }}</a></li>
+
+
+                <!--{{ stock.stock_title }}-->
+
+                <!--{% if stock.in_portfolio %}-->
+                    <!--<img src="http://i.imgur.com/b9b13Rd.png" />-->
+                <!--{% endif %}-->
+            <!--</label><br>-->
         {% endfor %}
-        <input type="submit" value="portfolio">
-    </form>
+        <!--<input type="submit" value="portfolio">-->
+    <!--</form>-->
 {% endblock %}
 
